--- a/index.html
+++ b/index.html
@@ -3,5 +3,6 @@
     <body>
         <1h1> This is a header</1h1>
         <p> This is a paragraph</p>
+        <P> This is another paragraph</P>
     </body>
 </html>
