--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
     <body>
-        <1h1> This is a header</1h1>
+        <h1> This is a header</1h1>
         <p> This is a paragraph</p>
         <P> This is another paragraph</P>
+        <p>Hello World</p>
     </body>
 </html>
